syntax = "proto3";

package demo.customer.api;

import "google/protobuf/timestamp.proto";

option java_package = "it.salspa.demo.spring.grpc.customer.api";
option java_multiple_files = true;
option java_outer_classname = "CustomerApiProto";

service CustomerService {
    rpc CreateCustomer (CreateCustomerRequest) returns (CustomerResponse);
    rpc GetCustomer (GetCustomerRequest) returns (CustomerResponse);
    rpc UpdateCustomer (UpdateCustomerRequest) returns (CustomerResponse);
    rpc DeleteCustomer (DeleteCustomerRequest) returns (DeleteCustomerResponse);
    rpc ListCustomers (ListCustomersRequest) returns (ListCustomersResponse);
}

message CreateCustomerRequest {
    string name = 1;
}

message GetCustomerRequest {
    string id = 1;
}

message UpdateCustomerRequest {
    string id = 1;
    string name = 2;
}

message DeleteCustomerRequest {
    string id = 1;
}

message DeleteCustomerResponse {
    bool success = 1;
    string message = 2;
}

message ListCustomersRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message ListCustomersResponse {
    repeated CustomerResponse customers = 1;
    int32 total = 2;
}

message CustomerResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone_number = 4;
    CustomerStatus status = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

enum CustomerStatus {
    CUSTOMER_STATUS_ACTIVE = 0;
    CUSTOMER_STATUS_INACTIVE = 1;
    CUSTOMER_STATUS_SUSPENDED = 2;
}
